--- a/src/components/draggable/draggable.component.css
+++ b/src/components/draggable/draggable.component.css
@@ -1,36 +1,58 @@
-.example-box {
-    width: 200px;
-    height: 200px;
-    border: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    cursor: move;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: #fff;
-    border-radius: 4px;
-    margin-right: 25px;
-    position: relative;
-    z-index: 1;
-    box-sizing: border-box;
-    padding: 10px;
-    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
-                0 2px 2px 0 rgba(0, 0, 0, 0.14),
-                0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  }
+ .block-map {
+    .block_grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      padding: 10px;
+      column-gap: 30px;
+      row-gap: 30px;
   
-  .example-box:active {
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                0 3px 14px 2px rgba(0, 0, 0, 0.12);
-  }
-  
-  .example-boundary {
-    width: 80vw;
-    height: 80vh;
+    }
+    .block-item-wrapper {
+      position: relative;
+    }
+    .block_item {
+      position: relative;
+      background-color: #f5f5f5;
+      border-bottom: 5px solid #5b8726;
+      padding: 20px;
+      font-size: 30px;
+      text-align: left;
+      width: 338px;
+      min-height: 149px;
+      align-items: center;
+      display: grid;
+      z-index: 2;
+      box-sizing: border-box;
+    }
 
-    border: dotted #ccc 2px;
+    .block_subitem {
+      font-size: 20px;
+    }
+
+    .purhcases{
+      background-color: #f4dab9;
+    }
+
+    .sales{
+      background-color: #b9e6f4;
+    }
+    p.need {
+      font-size: 16px;
+      font-weight: 700;
+    }
+  }
+  
+  .dashed-line {
+    position: absolute;
+    height: 2px;
+    width: 300px;
+    left: -300px;
+    z-index: 1;
+    top: calc(50% - 6px);
+    border-bottom: 2px dashed lightblue;
+  }
+  
+  .block-item-wrapper:nth-child(3n + 1) .dashed-line {
+    display: none;
   }
   
