--- a/src/pages/p00-main/p00-main.component.html
+++ b/src/pages/p00-main/p00-main.component.html
@@ -7,6 +7,7 @@
     </div>
 
     <div *ngIf="home">
-        <app-draggable></app-draggable>
+        <!-- <app-draggable></app-draggable> -->
+         <app-main-page-flow></app-main-page-flow>
     </div>
 </div>
