--- a/src/components/main-page-flow/main-page-flow.component.css
+++ b/src/components/main-page-flow/main-page-flow.component.css
@@ -1,15 +1,5 @@
  .block-map {
-    .block_grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      padding: 10px;
-      column-gap: 30px;
-      row-gap: 30px;
-  
-    }
-    .block-item-wrapper {
-      position: relative;
-    }
+
     .block_item {
       position: relative;
       background-color: #f5f5f5;
@@ -17,7 +7,7 @@
       padding: 20px;
       font-size: 30px;
       text-align: left;
-      width: 338px;
+      min-width: 200px;
       min-height: 149px;
       align-items: center;
       display: grid;
@@ -41,16 +31,7 @@
       font-weight: 700;
     }
   }
-  
-  .dashed-line {
-    position: absolute;
-    height: 2px;
-    width: 300px;
-    left: -300px;
-    z-index: 1;
-    top: calc(50% - 6px);
-    border-bottom: 2px dashed lightblue;
-  }
+
   
   .block-item-wrapper:nth-child(3n + 1) .dashed-line {
     display: none;
