--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -1,80 +1,134 @@
 <p>form-lv1 works!</p>
 
-<form class="d-flex">  
+
+<div class="d-flex flex-row">
+      <div><button style="width: 80px;" class="btn btn-primary" (click)="changePage('list')" >List</button></div>
+      <div><button style="width: 180px;" class="btn btn-warning" (click)="changePage('new')" >New Invoice</button></div>
+      <!-- <div><button style="width: 80px;" class="btn btn-info" >Update</button></div>
+      <div><button style="width: 80px;" class="btn btn-warning" (click)="clear()">Clear</button></div>
+      <div><button style="width: 80px;" class="btn btn-danger" >Cancel</button></div> -->
+</div>
+
+<div *ngIf="page=='list'" class="col-12">
+    <div class="col-12">  
+        <mat-form-field class="col-12" appearance="fill">
+            <mat-label>Select Supplier</mat-label>
+            <mat-select>
+                <mat-option value="one">First option</mat-option>
+                <mat-option value="two">Second option</mat-option>
+            </mat-select>
+        </mat-form-field>
+        </div>
+
+    <div class="col-12">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 col-12">
+
+            <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+        
+            <!-- Position Column -->
+            <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID. </th>
+            <td mat-cell *matCellDef="let element"> 
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+                &nbsp; {{element.userId}}  
+            </td>
+            </ng-container>
+        
+            <!-- Name Column -->
+            <ng-container matColumnDef="supplierId">
+            <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.supplierId}} </td>
+            </ng-container>
+        
+            <!-- Weight Column -->
+            <ng-container matColumnDef="invoiceNo">
+            <th mat-header-cell *matHeaderCellDef> Invoice No </th>
+            <td mat-cell *matCellDef="let element"> {{element.invoiceNo}} </td>
+            </ng-container>
+        
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef> Title </th>
+            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="totalAmount">
+            <th mat-header-cell *matHeaderCellDef> totalAmount </th>
+            <td mat-cell *matCellDef="let element"> {{element.totalAmount}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> date </th>
+            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> description </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="userId">
+            <th mat-header-cell *matHeaderCellDef> description </th>
+            <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+            </ng-container>
+        
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+</div>
+
+<div *ngIf="page=='new'" class="d-flex">  
     <div class="col-6">
         <div class="col-12">  
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Select Supplier</mat-label>
-                <mat-select>
+                <mat-select [value]="currentSupplierInvoice.supplierId" (selectionChange)="supplierChange($event.value)">
                     <div *ngFor="let i of supplierDropDown">
                         <mat-option [value]="i.supplierId">{{i.supplierName}}</mat-option>
                     </div>
                 </mat-select>
             </mat-form-field>
 
-            <mat-form-field class="col-6" appearance="fill">
-                <mat-label>Select Category</mat-label>
-                <mat-select>
-                    <div *ngFor="let i of categoryDropDown">
-                        <mat-option [value]="i.id">{{i.categoryName}}</mat-option>
-                    </div>
-                </mat-select>
-            </mat-form-field>
-            
-            <mat-form-field class="col-6" appearance="fill">
-                <mat-label>Select Product</mat-label>
-                <mat-select>
-                    <div *ngFor="let i of productDropDown">
-                        <mat-option [value]="i.productId">{{i.productName}}</mat-option>
-                    </div>
-                </mat-select>
-            </mat-form-field>
-
-            <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Select Account</mat-label>
-                <mat-select>
-                    <div *ngFor="let i of accountControlDropDown">
-                        <mat-option [value]="i.id">{{i.accountControlName}}</mat-option>
-                    </div>
-                </mat-select>
-            </mat-form-field>
-
             <div>
-                <mat-form-field class="col-6" appearance="fill">
-                    <mat-label>Expiry Date</mat-label>
-                    <input matInput [matDatepicker]="picker">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Invoice No</mat-label>
+                    <input [value]="currentSupplierInvoice.invoiceNo" (blur)="invoiceNoChange($event)" matInput>
+                </mat-form-field>
+                
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Title</mat-label>
+                    <input [value]="currentSupplierInvoice.title" (blur)="titleChange($event)" matInput>
+                </mat-form-field>
+
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Date</mat-label>
+                    <input (dateInput)="dateChange($event.value)" matInput [matDatepicker]="invoiceDate">
+                    <mat-datepicker-toggle matSuffix [for]="invoiceDate"></mat-datepicker-toggle>
+                    <mat-datepicker #invoiceDate></mat-datepicker>
                     <mat-hint>MM/DD/YYYY</mat-hint>
-                  </mat-form-field>
-                  
-                  <mat-form-field class="col-6" appearance="fill">
-                    <mat-label>ManuFactured Date</mat-label>
-                    <input matInput [matDatepicker]="picker1">
-                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                    <mat-datepicker #picker1></mat-datepicker>
-                    <mat-hint>MM/DD/YYYY</mat-hint>
-                  </mat-form-field>     
+                </mat-form-field>  
+    
+
             </div>
 
             <div>
-                <mat-form-field class="col-4" appearance="fill">
-                    <mat-label>Sale Unit Price</mat-label>
-                    <input matInput>
-                </mat-form-field>
-                
-                <mat-form-field class="col-4" appearance="fill">
-                    <mat-label>Purchase Unit Price</mat-label>
-                    <input matInput>
-                </mat-form-field>
-                
-                <mat-form-field class="col-4" appearance="fill">
-                    <mat-label>Stock Threshold</mat-label>
-                    <input matInput>
-                </mat-form-field>
+                <mat-form-field class="col-12" appearance="fill">
+                    <mat-label>Description</mat-label>
+                    <textarea style="height: 150px;" [value]="currentSupplierInvoice.description" (blur)="descriptionChange($event)" matInput></textarea>
+                </mat-form-field>      
+            </div>
+
+            <div class="d-flex">
+                <div class="ml-4">
+                    <button class="btn btn-primary" (click)="register()" type="submit">Register</button>
+                    <button class="btn btn-danger" (click)="clear()">Clear</button>
+                </div>
             </div>
         </div> 
     </div>
 
 
-</form>
+</div>
