--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -27,19 +27,16 @@
                 The actual rendered columns are set as a property on the row definition" -->
         
             <!-- Position Column -->
-            <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> ID. </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
-                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
-                &nbsp; {{element.userId}}  
-            </td>
-            </ng-container>
         
             <!-- Name Column -->
             <ng-container matColumnDef="supplierId">
             <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.supplierId}} </td>
+            <td mat-cell *matCellDef="let element"> 
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+                &nbsp;   
+                {{element.supplierId}} 
+            </td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -70,7 +67,7 @@
             </ng-container>
 
             <ng-container matColumnDef="userId">
-            <th mat-header-cell *matHeaderCellDef> description </th>
+            <th mat-header-cell *matHeaderCellDef> User </th>
             <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
             </ng-container>
         
@@ -81,7 +78,7 @@
 </div>
 
 <div *ngIf="page=='new'" class="d-flex">  
-    <div class="col-6">
+    <div class="col-6" *ngIf="subpage !=='detail'">
         <div class="col-12">  
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Select Supplier</mat-label>
@@ -126,8 +123,111 @@
                     <button class="btn btn-primary" (click)="register()" type="submit">Register</button>
                     <button class="btn btn-danger" (click)="clear()">Clear</button>
                 </div>
+
+                <div class="ml-4" *ngIf="currentSupplierInvoice.id && currentSupplierInvoice.id != ''">
+                    <button class="btn btn-info" (click)="setSubpage('detail')" type="submit">Details</button>
+                </div>
+
+                <div class="ml-4" *ngIf="currentSupplierInvoice.id == null || currentSupplierInvoice.id == ''">
+                    <button class="btn btn-info disabled" type="submit">Details</button>
+                </div>
             </div>
         </div> 
+    </div>
+
+
+    <div  class="col-6" *ngIf="subpage =='detail'" >
+        <div class="col-12">
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Invoice No</mat-label>
+                <input [value]="currentSupplierInvoiceDetail.supplierInvoiceId" disabled matInput>
+            </mat-form-field>
+
+            <div>
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Select Product</mat-label>
+                    <mat-select [value]="currentSupplierInvoice.supplierId" (selectionChange)="productChange($event.value)">
+                        <div *ngFor="let i of productDropDown">
+                            <mat-option [value]="i.productId">{{i.productName}}</mat-option>
+                        </div>
+                    </mat-select>
+                </mat-form-field>
+                
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Purchase Qty</mat-label>
+                    <input [value]="currentSupplierInvoiceDetail.purchaseQty" (blur)="purchaseQtyChange($event)" matInput>
+                </mat-form-field>
+
+                <mat-form-field class="col-4" appearance="fill">
+                    <mat-label>Purchase Unit Price</mat-label>
+                    <input [value]="currentSupplierInvoiceDetail.purchaseUnitPrice" (blur)="purchaseUnitPriceChange($event)" matInput>
+                </mat-form-field>
+
+    
+
+            </div>
+
+            <div>
+                <mat-form-field style="opacity: 0.01" class="col-12" appearance="fill">
+                    <mat-label>Description</mat-label>
+                    <textarea disabled style="height: 150px;" [value]="currentSupplierInvoice.description" (blur)="descriptionChange($event)" matInput></textarea>
+                </mat-form-field>      
+            </div>
+
+            <div class="d-flex">
+                <div class="ml-4">
+                    <button class="btn btn-primary" (click)="registerDetails()" type="submit">Register Details</button>
+                    <button class="btn btn-danger" (click)="clearDetails()">Clear Details</button>
+                </div>
+
+                <div class="ml-4">
+                    <button class="btn btn-info" (click)="setSubpage('')" type="submit">Back</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="col-12">
+            <table mat-table [dataSource]="dataSourceDetails" class="mat-elevation-z8 col-12">
+    
+                <!--- Note that these columns can be defined in any order.
+                    The actual rendered columns are set as a property on the row definition" -->
+            
+                <!-- Position Column -->
+            
+                <!-- Name Column -->
+                <ng-container matColumnDef="supplierInvoiceId">
+                <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
+                <td mat-cell *matCellDef="let element"> 
+                    <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                    &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button>
+                    &nbsp;   
+                    {{element.supplierInvoiceId}} 
+                </td>
+                </ng-container>
+            
+                <!-- Weight Column -->
+                <ng-container matColumnDef="productId">
+                <th mat-header-cell *matHeaderCellDef> Product Id </th>
+                <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
+                </ng-container>
+            
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="purchaseQty">
+                <th mat-header-cell *matHeaderCellDef> Purchase Qty </th>
+                <td mat-cell *matCellDef="let element"> {{element.purchaseQty}} </td>
+                </ng-container>
+    
+                <ng-container matColumnDef="purchaseUnitPrice">
+                <th mat-header-cell *matHeaderCellDef> purchaseUnitPrice </th>
+                <td mat-cell *matCellDef="let element"> {{element.purchaseUnitPrice}} </td>
+                </ng-container>
+            
+                <tr mat-header-row *matHeaderRowDef="displayedColumnsDetails"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumnsDetails;"></tr>
+            </table>
+        </div>
     </div>
 
 
