--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -12,6 +12,11 @@
 <div *ngIf="page=='list'" class="col-12">
     <div class="col-12">  
         <mat-form-field class="col-12" appearance="fill">
+            <mat-label>ID</mat-label>
+            <input [value]="currentSupplierInvoice.id" disabled matInput>
+        </mat-form-field>
+
+        <mat-form-field class="col-12" appearance="fill">
             <mat-label>Select Supplier</mat-label>
             <mat-select>
                 <mat-option value="one">First option</mat-option>
@@ -58,7 +63,7 @@
 
             <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef> date </th>
-            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.date | dateFormatPipe }} </td>
             </ng-container>
 
             <ng-container matColumnDef="description">
@@ -72,7 +77,7 @@
             </ng-container>
         
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr (click)="clickCurrentSelect(row.id,row)" id="{{row.id}}" style="{{row.id== currentSelect?'background-color: blanchedalmond;':'background-color: white;'}}" ngClass mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
 </div>
@@ -80,6 +85,11 @@
 <div *ngIf="page=='new'" class="d-flex">  
     <div class="col-6" *ngIf="subpage !=='detail'">
         <div class="col-12">  
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>ID</mat-label>
+                <input [value]="currentSupplierInvoice.id" disabled matInput>
+            </mat-form-field>
+
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Select Supplier</mat-label>
                 <mat-select [value]="currentSupplierInvoice.supplierId" (selectionChange)="supplierChange($event.value)">
