--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -1,4 +1,4 @@
-<p>form-lv1 works!</p>
+<p>Invoice && Invoice Details</p>
 
 
 <div class="d-flex flex-row">
@@ -36,12 +36,7 @@
             <!-- Name Column -->
             <ng-container matColumnDef="supplierId">
             <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
-                <!-- &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button> -->
-                &nbsp;   
-                {{element.supplierId}} 
-            </td>
+            <td mat-cell *matCellDef="let element">  {{element.supplierId}} </td>
             </ng-container>
         
             <!-- Weight Column -->
@@ -72,8 +67,17 @@
             </ng-container>
 
             <ng-container matColumnDef="userId">
-            <th mat-header-cell *matHeaderCellDef> User </th>
-            <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+                <th mat-header-cell *matHeaderCellDef> User </th>
+                <td mat-cell class="" *matCellDef="let element"> {{element.userId}}  </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell  *matCellDef="let element">  
+                <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                <!-- &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button> -->
+                &nbsp;      
+            </td>
             </ng-container>
         
             <tr mat-header-row class="text-center" *matHeaderRowDef="displayedColumns"></tr>
@@ -209,12 +213,7 @@
                 <!-- Name Column -->
                 <ng-container matColumnDef="supplierInvoiceId">
                 <th mat-header-cell *matHeaderCellDef>Supplier Name </th>
-                <td mat-cell *matCellDef="let element"> 
-                    <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
-                    <!-- &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button> -->
-                    &nbsp;   
-                    {{element.supplierInvoiceId}} 
-                </td>
+                <td mat-cell *matCellDef="let element">  {{element.supplierInvoiceId}} </td>
                 </ng-container>
             
                 <!-- Weight Column -->
@@ -232,6 +231,15 @@
                 <ng-container matColumnDef="purchaseUnitPrice">
                 <th mat-header-cell *matHeaderCellDef> purchaseUnitPrice </th>
                 <td mat-cell *matCellDef="let element"> {{element.purchaseUnitPrice}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef> Action </th>
+                    <td mat-cell  *matCellDef="let element">  
+                        <button  class="btn btn-outline-danger" (click)="deleteData(element.id)"> <i class="fas fa-trash-alt">Delete</i></button>
+                        <!-- &nbsp; <button  class="btn btn-outline-info" (click)="updateData(element.id)"> <i class="fas fa-trash-alt">Update</i></button> -->
+                        &nbsp;      
+                    </td>
                 </ng-container>
             
                 <tr mat-header-row *matHeaderRowDef="displayedColumnsDetails"></tr>
