--- a/src/pages/p00-main/p00-main.component.html
+++ b/src/pages/p00-main/p00-main.component.html
@@ -6,7 +6,7 @@
         <app-main-page-grid [btnImport]="btnImport" ></app-main-page-grid>    
     </div>
 
-    <div *ngIf="home">
+    <div *ngIf="home" class="w-100">
         <app-main-page-flow></app-main-page-flow>
     </div>
 </div>
